@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-15T08:16:04Z",
-  "count_outdated" : 336,
-  "uniques_outdated" : 180,
+  "timestamp" : "2022-06-15T16:15:30Z",
+  "count_outdated" : 337,
+  "uniques_outdated" : 181,
   "count" : 366,
   "uniques" : 198,
   "clones" : [
-    {
-      "timestamp": "2022-06-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 2,
