@@ -1,12 +1,7 @@
 {
-  "count": 30,
+  "count": 29,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-06-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 2,
