@@ -1,3 +1,10 @@
+2022-06-15T16:15:30Z:
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 180 336 / 198 366
+* notice: next accum: outdated-unq outdated-all / unq all: 181 337 / 198 366
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-06-01] / []
+
 2022-06-15T08:16:04Z:
 * notice: last 14d: unq all: 4 30
 * notice: prev accum: outdated-unq outdated-all / unq all: 180 336 / 197 365
